# research

./: .agent-memory.toml  .ai-review-ci.toml  .envrc  .gitignore  .gitmodules  .hermes  AGENTS.md  LEAN.md  README.md  SDL.md  STYLE.md  justfile  lake-manifest.json  lakefile.toml  mkdocs.yml  pyproject.toml  review-packet.tar  typings
computations/experiments/dm_moduli_spike/: .envrc  ARCHITECTURE.md  README.md  __init__.py  _sage_types.py  _typing_utils.py  conftest.py  justfile  pyproject.toml
computations/experiments/dm_moduli_spike/_admcycles/: __init__.py  admcycles_decorated.py  admcycles_stable.py
computations/experiments/dm_moduli_spike/_landscape/: __init__.py
computations/experiments/dm_moduli_spike/backends/: __init__.py  admcycles_decorated.py  admcycles_stable.py
computations/experiments/dm_moduli_spike/categories/: __init__.py  axioms.py  base.py  curves.py  foundation.py  membership.py  schemes.py  stacks.py  stratified.py
computations/experiments/dm_moduli_spike/curves/: __init__.py  families.py  pointed.py
computations/experiments/dm_moduli_spike/geometry/: __init__.py  compactification.py  morphisms.py  stacks.py  stratification.py
computations/experiments/dm_moduli_spike/moduli/: __init__.py  atlas_ownership.py  coarse.py  families.py  instances.py  stack.py
computations/experiments/dm_moduli_spike/notebooks/: highlights.ipynb
computations/experiments/dm_moduli_spike/objects/: __init__.py  _automorphism_action.py  automorphism_action.py  canonical.py  contraction_orbits.py  contractions.py  curve_types.py  delta_complex.py  edge_orbits.py  enumeration.py  factor_slots.py  gamma.py  graph_types.py  isomorphisms.py  model.py  records.py  splits.py  stable_graphs.py  strata.py  stratification.py
computations/experiments/dm_moduli_spike/stratification/: indexing.py  stratified.py
computations/experiments/dm_moduli_spike/testing_support/: __init__.py
computations/experiments/sage_category_tree_stubs/: .gitignore  category_parent_graph.dot  justfile  pyproject.toml
computations/experiments/sage_category_tree_stubs/design/: LAYOUT  STATUS  SURFACES.md
computations/experiments/sage_category_tree_stubs/sage_category_tree_stubs/: __init__.py  __main__.py  architecture.py  audit.py  authored_mapping.py  axioms.py  capability.py  composed_identity.py  constructibility.py  design_sources.py  dot_parse.py  exceptions.py  factory.py  graph_compare.py  join_views.py  manifests.py  mapping_build.py  naming.py  native_map.py  native_research_only.py  native_semantics.py  observed_build.py  observed_diff.py  registry.py  requirement_manifest.py  runtime_probe.py  sage_correspondence.py  sage_embed.py  sage_to_stub.py  seed_authored_sync.py  seed_dot.py  semantic_seed.py  slugs.py  viz.py
computations/experiments/sage_category_tree_stubs/tests/: conftest.py  test_architecture.py  test_architecture.sage  test_audit.py  test_audit.sage  test_design_sources.sage  test_graph_instantiation.py  test_graph_instantiation.sage  test_manifests.py  (+8 more)
computations/experiments/sage_lattice_category_spike/: README.md  REFERENCE_COVERAGE.md  SYNTHETIC_LATTICE_MODEL.md  __init__.py  arithmetic.py  categories.py  category_parent_graph.dot  category_parent_graph.html  conftest.py  constructors.py  discriminant.py  discriminant_forms.py  domain_algebra.py  domain_algebra_typecheck.py  elements.py  endomorphism_rings.py  homsets.py  isometry_groups.py  justfile  lattice_categories.py  parents.py  pyproject.toml  pyrightconfig.json  reference_manifest.py  route_audit.py  test_lattice_categories.py  test_lit_discriminant_forms.py  test_lit_embeddings.py  test_lit_genus.py  test_lit_gluing_actions.py  test_lit_isometry.py  test_lit_isometry_ci.py  test_lit_k3_lattices.py  test_lit_miranda_morrison_forms.py  test_lit_root_arithmetic.py  test_lit_root_shells.py  test_literature_citations.py  test_sage_reference_contract.py  value_objects.py
computations/experiments/sage_lattice_feature_spike/: README.md  __init__.py  conftest.py  justfile  pyproject.toml
(+918 files in other folders)
