[project]
name = "dzack-research"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "sage-lattice-category-spike==0.0.1",
    "sage-lattice-feature-spike==0.1.0",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
sage-lattice-category-spike = { workspace = true }
sage-lattice-feature-spike = { workspace = true }

[tool.uv.workspace]
members = [
    "computations/experiments/sage_lattice_category_spike",
    "computations/experiments/sage_lattice_feature_spike",
]
