[project]
name = "dzack-research"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "haystack-ai>=2.31.0",
    "pandoc-config @ https://github.com/dzackgarza/pandoc-config/archive/b567314b56b11326fdba05041afdccd11adee5b3.tar.gz",
    "python-dotenv>=1.2.2",
    "sage-lattice-category-spike==0.0.1",
    "sage-lattice-feature-spike==0.1.0",
    "streamlit>=1.59.2",
    "z3-solver>=4.16.0.0",
]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
sage-lattice-category-spike = { workspace = true }
sage-lattice-feature-spike = { workspace = true }

[tool.uv.workspace]
members = [
    "computations/experiments/sage_lattice_category_spike",
    "computations/experiments/sage_lattice_feature_spike",
]
