[project]
name = "dm-moduli-spike"
version = "0.0.1"
requires-python = ">=3.14"

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

# The package root IS this directory (imported as dm_moduli_spike via
# computations/experiments on PYTHONPATH), so map the package name to ".".
[tool.setuptools]
package-dir = { "dm_moduli_spike" = "." }
packages = [
    "dm_moduli_spike",
    "dm_moduli_spike.categories",
    "dm_moduli_spike.curves",
    "dm_moduli_spike.geometry",
    "dm_moduli_spike.moduli",
    "dm_moduli_spike.objects",
    "dm_moduli_spike._admcycles",
]

[tool.pytest.ini_options]
markers = [
    "ci: full stratification or large poset oracle (test-ci only, excluded from just test)",
]
