[project]
name = "sage-lattice-feature-spike"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = ["sage-lattice-category-spike==0.0.1"]

[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "sage_lattice_feature_spike" = "." }
packages = ["sage_lattice_feature_spike"]
